# enginegen

./: README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
docs/: README.md  architecture.md  geometry-ir.md  native-plugins.md  overview.md  pipeline.md  plugins.md  roadmap.md  spec.md  system-graph.md
enginegen/: __init__.py  api.py  cli.py
enginegen/core/: __init__.py  artifacts.py  audit.py  cache.py  canonical.py  config.py  diagnostics.py  external.py  graph.py  ir.py  logging.py  native_plugin.py  pipeline.py  plugin_api.py  plugin_loader.py  sandbox_wrapper.py  spec.py  units.py
enginegen/plugins_builtin/: adapter_noop.py  adapter_openfoam.py  analysis_openfoam.py  analysis_scalar.py  geometry_fidget.py  geometry_simple.py  optimization_nozzle_tuner.py  synth_baseline.py  synth_rocket_nozzle.py
enginegen/plugins_builtin/licenses/: fidget_notice.txt
examples/: case.yaml  graph.json  spec.yaml
examples/ir/: fidget_extrude.json  fidget_revolve.json  fidget_sphere_box.json
examples/openfoam/: README.md
examples/openfoam/case_template/0/: U  p
examples/openfoam/case_template/constant/: transportProperties
examples/openfoam/case_template/system/: controlDict  fvSchemes  fvSolution
rust/: Cargo.toml
rust/enginegen_core/: Cargo.toml
rust/enginegen_core/src/: lib.rs
rust/enginegen_geom_fidget/: Cargo.toml
rust/enginegen_geom_fidget/src/: lib.rs
rust/enginegen_plugin_abi/include/: enginegen_plugin.h
rust/enginegen_py/: Cargo.toml
rust/enginegen_py/src/: lib.rs
schemas/: capabilities.schema.json  engine_spec.schema.json  graph.schema.json  ir.schema.json  manifest.schema.json
schemas/dialects/: enginegen.implicit.fidget.v1.schema.json
tests/: test_contracts.py  test_fidget_backend.py  test_pipeline.py
