[package]
name = "enginegen_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "enginegen_core"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
enginegen_core = { path = "../enginegen_core" }
enginegen_geom_fidget = { path = "../enginegen_geom_fidget" }
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
